--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test-db": "tsx scripts/test-db-connection.ts"
+    "setup-db": "tsx scripts/setup-database.ts"
   },
   "dependencies": {
     "@aws-sdk/client-rds-data": "latest",
@@ -17,7 +17,6 @@
     "@libsql/client": "latest",
     "@libsql/client-wasm": "latest",
     "@neondatabase/serverless": "latest",
-    "@op-engineering/op-sqlite": "latest",
     "@opentelemetry/api": "latest",
     "@planetscale/database": "latest",
     "@prisma/client": "latest",
@@ -49,27 +48,23 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tidbcloud/serverless": "latest",
-    "@types/better-sqlite3": "latest",
     "@types/pg": "latest",
-    "@types/sql.js": "latest",
     "@upstash/redis": "latest",
     "@vercel/postgres": "latest",
     "@xata.io/client": "latest",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "latest",
-    "better-sqlite3": "latest",
-    "bun-types": "latest",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "cookie": "^1.0.2",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "latest",
     "embla-carousel-react": "8.5.1",
-    "expo-sqlite": "latest",
     "gel": "latest",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "latest",
     "kysely": "latest",
     "lucide-react": "^0.454.0",
@@ -85,8 +80,6 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "latest",
-    "sql.js": "latest",
-    "sqlite3": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
@@ -96,6 +89,9 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^8.0.0",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.44.2",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
