--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,13 @@ yarn-error.log*
 # env files
 .env*
 
+# local env files
+.env.local
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/lib/generated/prisma
