update fee structure component

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "gel": "latest",
     "input-otp": "1.4.1",
     "iron-session": "^8.0.4",
+    "jsonwebtoken": "^9.0.2",
     "knex": "latest",
     "kysely": "latest",
     "lucide-react": "^0.454.0",
