--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "sonner": "latest",
     "sql.js": "latest",
     "sqlite3": "latest",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
