--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "drizzle-orm": "latest",
     "embla-carousel-react": "8.5.1",
     "expo-sqlite": "latest",
+    "framer-motion": "^12.19.1",
     "gel": "latest",
     "input-otp": "1.4.1",
     "iron-session": "^8.0.4",
