--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "mysql2": "latest",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "papaparse": "^5.5.3",
     "pg": "latest",
     "postgres": "latest",
     "prisma": "^6.10.1",
@@ -93,6 +94,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
