--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "mysql2": "latest",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "node-fetch": "^2.7.0",
     "papaparse": "^5.5.3",
     "pg": "latest",
     "postgres": "latest",
