--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "input-otp": "1.4.1",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "knex": "latest",
     "kysely": "latest",
     "lucide-react": "^0.454.0",
