--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:superadmin": "npx prisma db seed"
   },
   "dependencies": {
     "@aws-sdk/client-rds-data": "latest",
