--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.12",
     "papaparse": "^5.5.3",
     "pg": "latest",
     "postgres": "latest",
@@ -111,6 +112,7 @@
     "@types/html2canvas": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.14",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
